Services styling fixups, add extra padding on mobile to bottom of hero

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -24,8 +24,12 @@
 }
 
 @mixin hero-image-container() {
-  // max-height: 820px;
-  height: calc(100% - 120px);
+  height: calc(100vh - 200px);
+
+  @include md {
+    margin-bottom: 0;
+    height: calc(100vh - 120px);
+  }
 }
 
 
