--- a/src/styles/hero.module.scss
+++ b/src/styles/hero.module.scss
@@ -28,6 +28,7 @@
   position: absolute;
   right: 0;
   bottom: 0;
+  margin-bottom: 80px;
 
   .content {
     font-size: 18px;
@@ -39,6 +40,7 @@
   @include md {
     padding: 40px 65px;
     width: 500px;
+    margin-bottom: 0;
   }
 
   @include lg {
