--- a/src/styles/services.module.scss
+++ b/src/styles/services.module.scss
@@ -26,6 +26,7 @@
         flex: 1 0 100%;
         background-color: #F6F6F6;
         position: relative;
+        padding-top: 80px;
 
         &:nth-of-type(2) {
           padding-bottom: 80px;
@@ -59,7 +60,7 @@
             display: flex;
             flex-direction: row;
             font-size: 16px;
-            padding: 6px 40px;
+            padding: 6px 30px;
 
             .service-name {
               flex: 1 0 auto;
@@ -79,7 +80,7 @@
   @include lg {
 
     .pricing-section {
-      padding: 60px 10%;
+      padding: 140px 8% 60px;
 
       .pricing-container {
         flex: 1 0 100%;
@@ -89,8 +90,17 @@
           flex-basis: calc(50% - 80px);
           margin: 0 40px;
           padding-bottom: 40px;
+          padding-top: 0;
         }
       }
     }
   }
+
+  @include xl {
+    .pricing-section {
+      padding: 140px 8% 60px;
+      max-width: 1600px;
+    }
+  }
 }
+
